syntax = "proto3";
package Protocol;

enum PacketType {
	NONE_TYPE = 0;

	CS_LOGIN = 1;
	CS_INPUT = 2;

	SC_LOGIN = 3;
	SC_ADD = 4;
	SC_MOVE_OBJECT = 5;
	SC_REMOVE = 6;
	SC_ATTACK = 7;
	SC_DODGE = 8;
}

enum Input {
	NONE_INPUT = 0;

	MOVE = 1;
	ATTACK = 2;
	DODGE = 3;
}

enum InputType {
	NONE_INPUT_TYPE = 0;

	KeyDown = 1;
	KeyUp = 2;
}